infrastructure/deploiement-vault/base/10-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
spec:
  serviceName: vault
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: vault
          image: hashicorp/vault:1.18
          args:
            - server
          ports:
            - containerPort: 8200
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - IPC_LOCK
              drop:
                - ALL
          volumeMounts:
            - name: vault-data
              mountPath: /vault/data
          readinessProbe:
            httpGet:
              path: /v1/sys/health?standbyok=true&sealedcode=204&uninitcode=204
              port: 8200
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /v1/sys/health?standbyok=true
              port: 8200
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
      volumes:
        - name: vault-data
          persistentVolumeClaim:
            claimName: vault-pvc
