infrastructure/deploiement-vault/base/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
spec:
  selector:
    app: vault
  ports:
    - name: http
      port: 18200
      targetPort: 18200
